--- a/FE/package.json
+++ b/FE/package.json
@@ -25,6 +25,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
     "react-toastify": "^9.1.2",
+    "react-use-websocket": "^4.3.1",
     "rollup-plugin-visualizer": "^5.9.0",
     "vitest": "^0.29.8"
   },
